syntax = "proto3";

option java_package = "com.nghia.grpc.entities.cash";
option java_multiple_files = true;

message BaseResponse {
  string code = 1;
  string status = 2;
  string message = 3;
}

message CreateWalletRequest {
  string username = 1;
}

message CreateWalletResponse {
  BaseResponse responseInfo = 3;
  int32 id = 1;
  int64 balance = 2;
}